# src/data/swagger.json
@@ -3,18 +3,8 @@
   "info": {
     "title": "API for shopping list",
     "version": "1.0.0",
-    "description": "This is a REST API application made with Express. It retrieves data from a JSON database.",
-    "license": {
-      "name": "Licensed Under MIT",
-      "url": "https://spdx.org/licenses/MIT.html"
-    }
+    "description": "This is a REST API application made with Express. It retrieves data from a JSON database."
   },
-  "servers": [
-    {
-      "url": "http://localhost:8000",
-      "description": "Development server"
-    }
-  ],
   "paths": {
     "/": {
       "get": {
@@ -22,6 +12,9 @@
         "responses": {
           "200": {
             "description": "Homepage for the Shopping List"
+          },
+          "404": {
+            "description": "Not found"
           }
         }
       }
@@ -32,7 +25,7 @@
         "description": "Retrieve a shopping list of items. Can be used to populate a list of fake users when prototyping or testing an API.",
         "responses": {
           "200": {
-            "description": "A list of users.",
+            "description": "A list of shopping items.",
             "content": {
               "application/json": {
                 "schema": {
@@ -40,6 +33,12 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Bad request"
           }
         }
       }
@@ -57,6 +56,14 @@
             }
           }
         },
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "$ref": "#/parameters/title"
+          }
+        ],
         "responses": {
           "201": {
             "description": "Created",
@@ -67,6 +74,12 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Bad request"
           }
         }
       }
@@ -105,6 +118,12 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Bad request"
           }
         }
       },
@@ -121,16 +140,32 @@
             }
           }
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Item"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Found",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Items"
+                  "$ref": "#/components/schemas/Item"
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Bad request"
           }
         }
       },
@@ -166,9 +201,30 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "422": {
+            "description": "Bad request"
           }
         }
       }
+    },
+    "securitySchemes": {
+      "basicAuth": {
+        "type": "http",
+        "scheme": "basic"
+      }
+    }
+  },
+  "parameters": {
+    "title": {
+      "name": "title",
+      "description": "The shopping list item title.",
+      "in": "formData",
+      "required": true,
+      "type": "string"
     }
   },
   "components": {
@@ -179,7 +235,7 @@
         "properties": {
           "items": {
             "type": "array",
-            "description": "The shopping list item title.",
+            "description": "A list of items.",
             "items": {
               "$ref": "#/components/schemas/Item"
             }
